--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -8,10 +8,10 @@
     <div class="user">
       <div>
         <div class="user-nav">
-          <%= link_to "ログイン", "#", class: "user-nav"%>
+          <%= link_to "ログイン", new_user_session_path, class: "user-nav"%>
         </div>
         <div class="user-nav">
-          <%= link_to "新規登録", "#", class: "user-nav"%>
+          <%= link_to "新規登録", new_user_registration_path, class: "user-nav"%>
         </div>
         <div class="user-nav">
           <%= link_to "マイページ", "#", class: "user-nav"%>
