--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -7,15 +7,21 @@
     </div>
     <div class="user">
       <div>
-        <div class="user-nav">
-          <%= link_to "ログイン", new_user_session_path, class: "user-nav"%>
-        </div>
-        <div class="user-nav">
-          <%= link_to "新規登録", new_user_registration_path, class: "user-nav"%>
-        </div>
-        <div class="user-nav">
-          <%= link_to "マイページ", "#", class: "user-nav"%>
-        </div>
+        <% if user_signed_in? %>
+          <div class="user-nav">
+            <%= link_to "マイページ", "#", class: "user-nav"%>
+          </div>
+          <div class="user-nav">
+            <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "user-nav"%>
+          </div>
+        <% else %>
+          <div class="user-nav">
+            <%= link_to "ログイン", new_user_session_path, class: "user-nav"%>
+          </div>
+          <div class="user-nav">
+            <%= link_to "新規登録", new_user_registration_path, class: "user-nav"%>
+          </div>
+        <% end %>
       </div>
     </div>
   </header>
