postsテーブル作成

--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -28,7 +28,7 @@
   <main>
     <div class="room-info">-相談ルーム-</div>
     <div class="room-up">
-      <%= link_to "マタニティ", posts_path, class: "room-genre"%>
+      <%= link_to "マタニティ", posts_path(room: 1), class: "room-genre"%>
       <%= link_to "出産のこと", "#", class: "room-genre"%>
       <%= link_to "育児のこと", "#", class: "room-genre"%>
     </div>
