--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -1,12 +1,14 @@
 .room-post{
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-family: "M PLUS Rounded 1c";
 }
 
 .serch-form{
-  width: 350px;
-  height: 30px;
-  margin: 10px;
+  width: 300px;
+  height: 25px;
+  margin: 10px 0 30px 0;
   padding-left: 10px;
   border: 1px solid #e68162;
   box-shadow: 1px 1px 0 rgb(230, 210, 182) inset,
@@ -15,8 +17,8 @@
   border-radius:7px;
 }
 .search-btn{
-  height: 30px;
-  width: 80px;
+  height: 25px;
+  width: 70px;
   border: 1px solid #e68162;
   color: white;
   background-color: #e68162;
@@ -24,4 +26,63 @@
                 0 0 4px #f0c6a4 inset,
                 2px 2px 4px #b69274;
   border-radius:7px;
+}
+.search-btn:hover{
+  background-color: #db7a5d;
+}
+
+.room-title{
+  margin: 15px;
+  font-size: 30px;
+  color: aliceblue;
+  text-shadow: 1px 2px 3px #ad5d52;
+}
+.posts{
+  width: 600px;
+}
+.post-link{
+  color: #ad5d52;
+}
+.post{
+  display: flex;
+  flex-direction: column;
+  margin: 5px;
+  padding: 25px 50px;
+  background-color: white;
+  border: 2px dotted #e68162;
+  border-radius: 40px;
+}
+.post:hover{
+  background-color: rgb(253, 251, 234);
+}
+.post-head{
+  font-size: 20px;
+  margin-bottom: 5px;
+  font-weight: bold;
+  background: linear-gradient(transparent 50%, rgb(250, 238, 215) 50%);
+}
+a{
+  text-decoration: none;
+}
+.post-main{
+  margin: 10px 0;
+}
+.post-foot{
+  text-align: end;
+}
+.detail-info{
+  text-align: center;
+  margin-top: 5px;
+  display: none;
+  font-size: 15px;
+  color: #ecc9c6;
+}
+.post:hover .detail-info{
+  display: inline;
+}
+.posts-nil{
+  color: white;
+  text-align: center;
+  margin: 70px;
+  text-shadow: 0px 0px 10px #ad5d52;
 }
