--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -1,7 +1,8 @@
 .post-new-main{
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  font-family: "M PLUS Rounded 1c";
 }
 .post-form{
   display: flex;
@@ -9,7 +10,7 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  margin: 50px;
+  margin: 10px;
   padding: 30px;
   height: 400px;
   width: 600px;
@@ -54,4 +55,10 @@
 }
 .post-btn:hover{
   background-color: #db7a5d;
+}
+
+.back-btn{
+  margin-top: 30px;
+  color: #db7a5d;
+  text-decoration: underline;
 }
