投稿機能実装

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -58,7 +58,7 @@
       <% end %>
     </div>
     <div class="back-btn">
-      <%= link_to "ルームへ戻る", :back ,class:"back-btn" %>
+      <%= link_to "相談ルームへ戻る", posts_path(room: params[:room]), class:"back-btn" %>
     </div>
   </main>
   <footer>
