--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -16,6 +16,7 @@
   width: 600px;
   border-radius: 30px;
   background-color: white;
+  box-shadow: 0 2px 8px #e4ab99;
 }
 .problem-input{
   height: 50px;
