--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -42,8 +42,12 @@
               0 0 4px #d1c8c4 inset;
   font-family: "M PLUS Rounded 1c";
 }
+.error-info{
+  color: #f0c6a4;
+  font-size: 15px;
+}
 .post-btn{
-  margin: 10px;
+  margin-top: 20px;
   height: 50px;
   width: 100px;
   border-radius: 10px;
