--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -64,7 +64,7 @@
           </div>
         <% end %>
         <% @posts1.each do |post|%>       
-          <%= link_to '#', class: "post-link" do %>
+          <%= link_to post_path(post.id), class: "post-link" do %>
           <div class="post">
             <div class="post-head">
               <div class="post-title"><%= post.problem %></div>
@@ -86,7 +86,7 @@
           </div>
         <% end %>
         <% @posts2.each do |post|%>       
-          <%= link_to '#', class: "post-link" do %>
+          <%= link_to post_path(post.id), class: "post-link" do %>
           <div class="post">
             <div class="post-head">
               <div class="post-title"><%= post.problem %></div>
@@ -108,7 +108,7 @@
           </div>
         <% end %>
         <% @posts3.each do |post|%>
-          <%= link_to '#', class: "post-link" do %>
+          <%= link_to post_path(post.id), class: "post-link" do %>
           <div class="post">
             <div class="post-head">
               <div class="post-title"><%= post.problem %></div>
@@ -130,7 +130,7 @@
           </div>
         <% end %>
         <% @posts4.each do |post|%>
-          <%= link_to '#', class: "post-link" do %>
+          <%= link_to post_path(post.id), class: "post-link" do %>
           <div class="post">
             <div class="post-head">
               <div class="post-title"><%= post.problem %></div>
@@ -152,7 +152,7 @@
           </div>
         <% end %>
         <% @posts5.each do |post|%>
-          <%= link_to '#', class: "post-link" do %>
+          <%= link_to post_path(post.id), class: "post-link" do %>
           <div class="post">
             <div class="post-head">
               <div class="post-title"><%= post.problem %></div>
@@ -174,7 +174,7 @@
           </div>
         <% end %>
         <% @posts6.each do |post|%>
-          <%= link_to '#', class: "post-link" do %>
+          <%= link_to post_path(post.id), class: "post-link" do %>
           <div class="post">
             <div class="post-head">
               <div class="post-title"><%= post.problem %></div>
